[gd_scene load_steps=5 format=3 uid="uid://d35gq840pcm2l"]

[ext_resource type="Script" uid="uid://cvc8sg35b15o4" path="res://scenes/_player/player_node.gd" id="1_abu21"]
[ext_resource type="SpriteFrames" uid="uid://dhhttptuhm7fr" path="res://resources/player/player_visuals.tres" id="2_abu21"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qkbid"]
radius = 18.13
height = 202.51

[sub_resource type="CircleShape2D" id="CircleShape2D_abu21"]
radius = 129.542

[node name="Player_Node" type="CharacterBody2D"]
script = ExtResource("1_abu21")

[node name="Visuals_Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_abu21")
animation = &"run"
autoplay = "idle"
frame_progress = 0.169238

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 23)
shape = SubResource("CapsuleShape2D_qkbid")

[node name="Coyote_Timer" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="Jump_buffered_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hurt_Box_Component" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_Box_Component"]
shape = SubResource("CircleShape2D_abu21")
